<resources>
    <string name="app_name">AMATrace</string>
    <string name="applogo">AppLogo</string>
    <string name="backgroundlandingpage">BackgroundLandingPage</string>
    <string name="scan_sebagai_pelanggan">Scan Sebagai Pelanggan</string>
    <string name="atau">atau</string>
    <string name="masuk">Masuk</string>
    <string name="password_kurang">Password Kurang dari 8 Karakter</string>
    <string name="image_desc">logoApp\n</string>
    <string name="info">Hubungi nomor Admin dibawah ini untuk mendapatkan <b>Password</b> Anda</string>
    <string name="contact_info"> 081395538770</string>
    <string name="adminAmatrace">-Admin AMATrace-\n Best Regards</string>
    <string name="lupa_kata_sandi">Lupa kata sandi</string>
    <string name="masukLogin">MASUK</string>
    <string name="buttonback">buttonBack</string>
    <string name="title_activity_navigation_supplier">NavigationSupplier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_kirim">Pengiriman</string>
    <string name="menu_keluar">Keluar</string>
    <string name="title_activity_main_supplier">MainSupplierActivity</string>
    <string name="nav_header_title">Farhan Naufal N</string>
    <string name="nav_header_subtitle">farhannaufaln@gmail.com</string>
    <string name="nav_header_subtitle2">Kebun Jatinangor</string>
    <string name="menu_home">Menu Utama</string>
    <string name="menu_ganti_profile">Profil</string>


    <string name="back">Back</string>
    <string name="profile">PROFIL</string>
    <string name="upload_photo">Unggah Foto +</string>
    <string name="name">Nama</string>
    <string name="name_example">Farhan Naufal Nurdiansyah</string>
    <string name="company_name">Nama Perusahaan</string>
    <string name="company_name_example">Kebun Jatinangor</string>
    <string name="phone_number">No Hp</string>
    <string name="phone_number_example">+62 81395538770</string>
    <string name="address">Alamat</string>
    <string name="address_example">Sumedang, Jatinangor</string>
    <string name="company_description">Deskripsi Perusahaan</string>
    <string name="company_description_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="save_data">Simpan data</string>

    <string name="title_activity_producer_main">ProducerMainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_stockpasokan">Stok Pasokan\n</string>
    <string name="menu_daftar_batch">Daftar Batch\n</string>
    <string name="menu_analisis">Analisis\n</string>
    <string name="title_activity_bottom_supplier">BottomSupplierActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home\n</string>

    <string name="profil">Profil</string>
    <string name="scan">Scan</string>
    <string name="stok">Stok</string>


</resources>