<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.amatrace.pages.producer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_producer" />

    <fragment
        android:id="@+id/nav_ubahprofileProducer"
        android:name="com.example.amatrace.pages.producer.ui.ubahProfileProducer.UbahProfileProducerFragment"
        android:label="@string/menu_ganti_profile"
        tools:layout="@layout/fragment_ubahprofileproducer" />


    <fragment
        android:id="@+id/nav_daftarbatch"
        android:name="com.example.amatrace.pages.producer.ui.daftarbatch.daftarbatchFragment"
        android:label="@string/menu_daftar_batch"
        tools:layout="@layout/fragment_daftarbacth" />

    <fragment
        android:id="@+id/nav_analisis"
        android:name="com.example.amatrace.pages.producer.ui.analisis.analisisFragment"
        android:label="@string/menu_analisis"
        tools:layout="@layout/fragment_analisis" />

    <!-- BOTTOM NAVIGATION -->

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.amatrace.pages.supplier.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.amatrace.pages.producer.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.amatrace.pages.producer.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>